--- a/ctBackend/src/main/webapp/WEB-INF/web.xml
+++ b/ctBackend/src/main/webapp/WEB-INF/web.xml
@@ -3,18 +3,33 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
-  <servlet>
-		<servlet-name>Jersey REST Service</servlet-name>
-		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-		<init-param>
-			<param-name>com.sun.jersey.config.property.packages</param-name>
-			<param-value>de.ct.webservice</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
+	<display-name>Archetype Created Web Application</display-name>
+
+	<context-param>
+		<param-name>resteasy.resources</param-name>
+		<param-value>de.ct.webservice.UserServerRESTImpl, de.ct.webservice.EventServerRESTImpl, de.ct.webservice.MessageServerRESTImpl, de.ct.webservice.ParticipationServerRESTImpl</param-value>		
+	</context-param>
+	
+	
+	 
+	<!-- <context-param>
+		<param-name>resteasy.scan</param-name>
+		<param-value>true</param-value>
+	</context-param> -->
+
+	<listener>
+		<listener-class>
+			org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap</listener-class>
+	</listener>
+	<servlet>
+		<servlet-name>resteasy-servlet</servlet-name>
+		<servlet-class>
+			org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
 	</servlet>
+
 	<servlet-mapping>
-		<servlet-name>Jersey REST Service</servlet-name>
-		<url-pattern>/rest/*</url-pattern>
+		<servlet-name>resteasy-servlet</servlet-name>
+		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
+
 </web-app>
