--- a/ctAndroidClient/AndroidManifest.xml
+++ b/ctAndroidClient/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.neilgoodman.android.restservicetutorial"
+    package="de.ct.client"
     android:versionCode="1"
     android:versionName="1.0" >
 
