--- a/ctAndroidClient/.classpath
+++ b/ctAndroidClient/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Ingo/Documents/JavaProjekte/workspaceComeTogetherApp/ComeTogether/ctAndroidClient/libs/jackson-all-1.9.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Syzyryk/Downloads/JakeWharton-ActionBarSherlock-4.1.0-0-g9598f2b/JakeWharton-ActionBarSherlock-88fc341/library/libs/android-support-v4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
