--- a/ctAndroidClient/AndroidManifest.xml
+++ b/ctAndroidClient/AndroidManifest.xml
@@ -4,21 +4,36 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="4" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="15"/>
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
-        <service android:name="de.ct.client.service.RESTService" />
-
-        <activity android:name="de.ct.client.RESTServiceActivity" >
+        <activity
+            android:name=".FirstActivity"
+            android:label="@string/app_name" 
+            android:theme="@style/Theme.Sherlock.Light">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            </activity>
+        
+        <activity
+            android:name=".ProfilErstellenActivity"
+            android:label="@string/app_name" 
+            android:theme="@style/Theme.Sherlock.Light">
+            
         </activity>
+        
+        <activity
+            android:name=".ProfilBearbeitenActivity"
+            android:label="@string/app_name" 
+            android:theme="@style/Theme.Sherlock.Light">
+            
+        </activity>
+       
     </application>
 
 </manifest>
