--- a/ctAndroidClient/project.properties
+++ b/ctAndroidClient/project.properties
@@ -9,3 +9,4 @@
 
 # Project target.
 target=android-15
+android.library.reference.1=../../Downloads/JakeWharton-ActionBarSherlock-4.1.0-0-g9598f2b/JakeWharton-ActionBarSherlock-88fc341/library
